--- a/production/index.html
+++ b/production/index.html
@@ -394,6 +394,126 @@
               </div>
             </div>
 
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <div class="x_panel tile fixed_height_320 overflow_hidden">
+                <div class="x_title">
+                  <h2>Device Usage</h2>
+                  <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Settings 1</a>
+                        </li>
+                        <li><a href="#">Settings 2</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li><a class="close-link"><i class="fa fa-close"></i></a>
+                    </li>
+                  </ul>
+                  <div class="clearfix"></div>
+                </div>
+                <div class="x_content" style= "height: -moz-available; height: -webket-fill-available; height:100%; width: 100%;">
+                </div>
+                <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20150213-230422_1600658137?asIframe" frameborder="0" 
+                  scrolling="no"
+                  style="overflow:hidden; 
+                  display:block; position: absolute; height: 100%; width:97%;" ></iframe>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <div class="x_panel tile fixed_height_320 overflow_hidden">
+                <div class="x_title">
+                  <h2>Device Usage</h2>
+                  <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Settings 1</a>
+                        </li>
+                        <li><a href="#">Settings 2</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li><a class="close-link"><i class="fa fa-close"></i></a>
+                    </li>
+                  </ul>
+                  <div class="clearfix"></div>
+                </div>
+                <div class="x_content" style= "height: -moz-available; height: -webket-fill-available; height:100%; width: 100%;">
+                </div>
+                <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-134203_1198283986?asIframe" frameborder="0" 
+                  scrolling="no"
+                  style="overflow:hidden; 
+                  display:block; position: absolute; height: 100%; width:97%;" ></iframe>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-4 col-xs-12">
+              <div class="x_panel tile fixed_height_320 overflow_hidden">
+                <div class="x_title">
+                  <h2>Device Usage</h2>
+                  <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Settings 1</a>
+                        </li>
+                        <li><a href="#">Settings 2</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li><a class="close-link"><i class="fa fa-close"></i></a>
+                    </li>
+                  </ul>
+                  <div class="clearfix"></div>
+                </div>
+                <div class="x_content" style= "height: -moz-available; height: -webket-fill-available; height:100%; width: 100%;">
+                </div>
+                <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-143314_2100151876?asIframe" frameborder="0" 
+                  scrolling="no"
+                  style="overflow:hidden; 
+                  display:block; position: absolute; height: 100%; width:97%;" ></iframe>
+              </div>
+            </div>
+
+            <div class="col-md-8 col-sm-8 col-xs-12">
+              <div class="x_panel tile fixed_height_320 overflow_hidden">
+                <div class="x_title">
+                  <h2>Device Usage</h2>
+                  <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Settings 1</a>
+                        </li>
+                        <li><a href="#">Settings 2</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li><a class="close-link"><i class="fa fa-close"></i></a>
+                    </li>
+                  </ul>
+                  <div class="clearfix"></div>
+                </div>
+                <div class="x_content" style= "height: -moz-available; height: -webket-fill-available; height:100%; width: 100%;">
+                </div>
+                <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-143449_912221377?asIframe" frameborder="0" 
+                  scrolling="no"
+                  style="overflow:hidden; 
+                  display:block; position: absolute; height: 100%; width:97%;" ></iframe>
+              </div>
+            </div>
+
           </div>
 
 
